feat: implement using browser cookies to verify not-a-bot for YouTube